// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings computes a contract address 1`] = `
AztecAddress {
  "buffer": {
    "data": [
      43,
      91,
      5,
      169,
      98,
      157,
      197,
      151,
      152,
      84,
      209,
      170,
      71,
      61,
      58,
      131,
      234,
      131,
      176,
      106,
      57,
      5,
      46,
      153,
      67,
      89,
      52,
      99,
      15,
      236,
      226,
      244,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Fr {
  "value": 10724872372058747971865607189197215883616299259274114995580068674650484136837n,
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Fr {
  "value": 14753252017424563237038015065402454919037294146339173328174383872613705551896n,
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Fr {
  "value": 12906610331695443491500387150847739068531523218659917858520872318692742082976n,
}
`;

exports[`abis wasm bindings computes siloed commitment 1`] = `
Fr {
  "value": 4300635537850003871451650912699252898033249035618622792407744400807361159458n,
}
`;

exports[`abis wasm bindings computes siloed nullifier 1`] = `
Fr {
  "value": 4957445512951137590281746823314455197982530036508465893793736233926551006579n,
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
{
  "data": [
    15,
    23,
    184,
    176,
    133,
    230,
    58,
    209,
    220,
    185,
    120,
    139,
    48,
    34,
    89,
    210,
    214,
    84,
    22,
    155,
    178,
    36,
    144,
    135,
    180,
    126,
    227,
    233,
    41,
    239,
    80,
    144,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes constructor info 1`] = `
Fr {
  "value": 74771810193401619436460949258064408227201554785021679654928411451496318664n,
}
`;

exports[`abis wasm bindings hashes empty function args 1`] = `
Fr {
  "value": 0n,
}
`;

exports[`abis wasm bindings hashes function args 1`] = `
Fr {
  "value": 18906676604864959005173276375312600640969342814693694325262988108261136820631n,
}
`;

exports[`abis wasm bindings hashes many function args 1`] = `
Fr {
  "value": 16458590480032755384470108712609389694120470087885514794475677859856835664159n,
}
`;
